--- a/entregar.html
+++ b/entregar.html
@@ -1,157 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Entregar Materiales</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-  <style>
-    body { font-family: Arial; background:#f2f2f2; padding:20px; }
-    .box { background:#fff; padding:20px; border-radius:10px; max-width:600px; margin:20px auto; box-shadow:0 0 10px rgba(0,0,0,0.1); }
-    h2 { text-align:center; }
-    .solicitud { border:1px solid #ddd; padding:15px; border-radius:10px; margin-bottom:15px; }
-    .material { padding:5px 0; border-bottom:1px solid #eee; }
-    button { padding:8px 12px; border:none; border-radius:6px; cursor:pointer; }
-    .btn-entregar { background:#28a745; color:white; }
-    .btn-entregar:hover { opacity:0.9; }
-    .completado { color:green; font-weight:bold; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Entregar Materiales</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
 
-<div class="box">
-  <h2>Entregar Materiales</h2>
-  <div id="contenedor"></div>
-</div>
+<h1>Entregar Materiales</h1>
+
+<!-- Contenedor para mostrar solicitudes -->
+<div id="listaSolicitudes"></div>
 
 <script>
-/* ----------------------------------------------------
-   🔗 Conexión Supabase
----------------------------------------------------- */
-const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY";
+    // Inicializar Supabase
+    const supabaseClient = supabase.createClient(
+        "https://lzspjrbmhdxbuyqiysxm.supabase.co",
+        "public-anon-key"
+    );
 
-const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    // ⛔ **YA NO VALIDAMOS LOGIN**
+    // Antes aquí se revisaba el usuario, pero fue eliminado.
 
+    // Obtener ID del usuario desde localStorage si existe
+    const userId = localStorage.getItem("user_id") || "";  
+    console.log("Usuario logueado (solo si existe):", userId);
 
-/* ----------------------------------------------------
-   🔄 Cargar solicitudes pendientes
----------------------------------------------------- */
-document.addEventListener("DOMContentLoaded", () => {
-    const email = localStorage.getItem("email");
-    cargarSolicitudesPendientes(email);
-});
+    // ----------------------------------------------------------
+    // Cargar solicitudes (sin login obligatorio)
+    // ----------------------------------------------------------
+    async function cargarSolicitudes() {
+        console.log("🔄 Cargando solicitudes...");
 
-async function cargarSolicitudesPendientes(emailUsuario) {
-    const cont = document.getElementById("contenedor");
-    cont.innerHTML = "<p>Cargando solicitudes...</p>";
+        let query = supabaseClient
+            .from("solicitudes")
+            .select("id, nombre_material, cantidad, estado, user_id");
 
-    let query = supabaseClient
-        .from("solicitudes")
-        .select("*")
-        .eq("estado", "Pendiente");
+        // Si existe un user_id, filtramos
+        if (userId !== "") {
+            query = query.eq("user_id", userId);
+            console.log("Aplicando filtro por usuario:", userId);
+        } else {
+            console.log("No existe user_id → No se aplica filtro");
+        }
 
-    if (emailUsuario) {
-        query = query.eq("email", emailUsuario);
+        const { data, error } = await query;
+
+        if (error) {
+            console.error("❌ Error cargando solicitudes:", error);
+            return;
+        }
+
+        mostrarSolicitudes(data);
     }
 
-    const { data: solicitudes, error } = await query;
+    // ----------------------------------------------------------
+    // Mostrar solicitudes en pantalla
+    // ----------------------------------------------------------
+    function mostrarSolicitudes(lista) {
+        const contenedor = document.getElementById("listaSolicitudes");
+        contenedor.innerHTML = "";
 
-    if (error) {
-        cont.innerHTML = "<p>Error al cargar solicitudes.</p>";
-        return;
+        if (lista.length === 0) {
+            contenedor.innerHTML = "<p>No hay solicitudes.</p>";
+            return;
+        }
+
+        lista.forEach(item => {
+            const div = document.createElement("div");
+            div.style.border = "1px solid #ccc";
+            div.style.margin = "10px";
+            div.style.padding = "10px";
+
+            div.innerHTML = `
+                <p><strong>Material:</strong> ${item.nombre_material}</p>
+                <p><strong>Cantidad:</strong> ${item.cantidad}</p>
+                <p><strong>Estado:</strong> ${item.estado}</p>
+                <button onclick="entregar(${item.id})">Entregar</button>
+            `;
+
+            contenedor.appendChild(div);
+        });
     }
 
-    if (!solicitudes || solicitudes.length === 0) {
-        cont.innerHTML = "<p>No hay solicitudes pendientes.</p>";
-        return;
-    }
-
-    cont.innerHTML = "";
-
-    for (const sol of solicitudes) {
-        await mostrarSolicitud(sol);
-    }
-}
-
-
-/* ----------------------------------------------------
-   📦 Mostrar solicitud con sus materiales
----------------------------------------------------- */
-async function mostrarSolicitud(solicitud) {
-    const cont = document.getElementById("contenedor");
-
-    // obtener materiales
-    const { data: materiales } = await supabaseClient
-        .from("materiales_solicitados")
-        .select("*")
-        .eq("id_solicitud", solicitud.id);
-
-    const div = document.createElement("div");
-    div.className = "solicitud";
-
-    let html = `
-      <p><b>ID Solicitud:</b> ${solicitud.id}</p>
-      <p><b>Asignatura:</b> ${solicitud.asignatura}</p>
-      <p><b>Fecha:</b> ${new Date(solicitud.fecha).toLocaleString()}</p>
-      <p><b>Solicitante:</b> ${solicitud.email}</p>
-      <h4>Materiales:</h4>
-    `;
-
-    materiales.forEach(m => {
-        html += `
-          <div class="material">
-            <b>${m.material}</b> — Cant: ${m.cantidad}
-            ${m.fecha_entrega ? `<span class="completado">✔ Entregado (${new Date(m.fecha_entrega).toLocaleString()})</span>` 
-            : `<button class="btn-entregar" onclick="entregarMaterial(${m.id}, ${solicitud.id})">Entregar</button>`}
-          </div>
-        `;
-    });
-
-    div.innerHTML = html;
-    cont.appendChild(div);
-}
-
-
-/* ----------------------------------------------------
-   📤 Entregar material (marca fecha_entrega)
----------------------------------------------------- */
-async function entregarMaterial(idMaterial, idSolicitud) {
-    const fecha = new Date().toISOString();
-
-    await supabaseClient
-        .from("materiales_solicitados")
-        .update({ fecha_entrega: fecha })
-        .eq("id", idMaterial);
-
-    // verificar si todos están entregados
-    await verificarSolicitudCompletada(idSolicitud);
-
-    location.reload();
-}
-
-
-/* ----------------------------------------------------
-   ✔️ Si todos los materiales fueron entregados → marcar solicitud como "Entregado"
----------------------------------------------------- */
-async function verificarSolicitudCompletada(idSolicitud) {
-    const { data: materiales } = await supabaseClient
-        .from("materiales_solicitados")
-        .select("*")
-        .eq("id_solicitud", idSolicitud);
-
-    const todosEntregados = materiales.every(m => m.fecha_entrega !== null);
-
-    if (todosEntregados) {
-        await supabaseClient
+    // ----------------------------------------------------------
+    // Función entregar
+    // ----------------------------------------------------------
+    async function entregar(idSolicitud) {
+        const { error } = await supabaseClient
             .from("solicitudes")
             .update({ estado: "Entregado" })
             .eq("id", idSolicitud);
+
+        if (error) {
+            alert("❌ Error al entregar material");
+            console.log(error);
+            return;
+        }
+
+        alert("✔️ Material entregado");
+        cargarSolicitudes(); // recargar lista
     }
-}
+
+    // Cargar solicitudes al iniciar
+    cargarSolicitudes();
 </script>
 
 </body>
